# rusty-auth

./: .env  .gitignore  appspec.yml  compose.override.yml  compose.yml  docker-bake.hcl  taskdef.json
app-service/: Cargo.toml  Dockerfile
auth-service/: .dockerignore  .env.local  .env.production  .gitignore  Cargo.toml  Dockerfile  build.rs  config.local.yaml  config.production.yaml
auth-service/.sqlx/: query-94e812cbc7b3213e5b15db7925c8a5b192583420cf64580239da74b2ea31198c.json
auth-service/assets/: app.js  index.html
auth-service/migrations/: 20240609085836_create_users_table.up.sql
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: mod.rs
auth-service/src/config/: example.toml
auth-service/src/domain/: data_stores.rs  email.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: aws_email_client.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  configuration.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
nginx/: Dockerfile  nginx-setup.conf
proto/: auth.proto
terraform/: main.tf
(+9 files in other folders)
